Wait for Network Manager to complete before starting
Fixes a problem where sometimes interfaces weren't available when BIND starts, causing a failure to listen on those interfaces.

--- a/roles/bind/defaults/main.yml
+++ b/roles/bind/defaults/main.yml
@@ -1,7 +1,9 @@
 ---
   # firewalld zone which will allow DNS through
   firewalldZone: "public"
-
+  waitfornetmgr:
+    - { option: 'After', value: 'network-online.target' }
+    - { option: 'Wants', value: 'network-online.target' }
   # options: recursive, primary, secondary
   ServerRole: recursive
   # Directories and files will be set to allow this user read and write access as required
