--- a/roles/bind/tasks/recursive.yml
+++ b/roles/bind/tasks/recursive.yml
@@ -4,9 +4,9 @@
   - name: Add bind keys if required. These will only be used the first time BIND starts
     copy:
       src: files/bind.keys.v9_11
-      dest: {{ datapath }}/bind.keys
-      owner: {{ binduser }}
-      group: {{ binduser }}
+      dest: "{{ datapath }}/bind.keys"
+      owner: "{{ binduser }}"
+      group: "{{ binduser }}"
       mode: '0644'
     when: key_file == yes
   # Review README for validating the file above
