--- a/roles/bind/tasks/recursive.yml
+++ b/roles/bind/tasks/recursive.yml
@@ -37,3 +37,17 @@
     loop: "{{ rpz_policies }}"
     when: rpz_policies is defined
     notify: reconfig isc-bind scl
+    register: zone_changes
+
+  - name: Static Zone file changes will cause new serial to be written
+    template:
+      src: rpz-serial.j2
+      dest: "{{ datapath }}/rpz/{{ policy }}.serial"
+      force: yes
+      owner: "{{ binduser }}"
+      group: "{{ binduser }}"
+      mode: 0660
+    when: policy.changed == true
+    loop: "{{ zone_changes.results}}"
+    loop_control:
+      loop_var: policy
