--- a/roles/bind/tasks/main.yml
+++ b/roles/bind/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
   - name: Install isc-bind repo from COPR
     yum_repository:
-      name: "COPR-ISC-{{ BindRelease }}"
-      description: COPR ISC repo for BIND {{ BindRelease }}
-      baseurl: "https://copr-be.cloud.fedoraproject.org/results/isc/{{ BindRelease }}/epel-{{ ansible_distribution_major_version }}-{{ ansible_userspace_architecture }}/"
-      gpgkey: "https://copr-be.cloud.fedoraproject.org/results/isc/{{ BindRelease }}/pubkey.gpg"
-      gpgcheck: yes
-      skip_if_unavailable: yes
+      name: "{{ isc_bind_repository.name }}"
+      description: "{{ isc_bind_repository.description }}"
+      baseurl: "{{ isc_bind_repository.baseurl }}"
+      gpgkey: "{{ isc_bind_repository.gpgkey }}"
+      gpgcheck: "{{ isc_bind_repository.gpgcheck }}"
+      skip_if_unavailable: "{{ isc_bind_repository.skip_if_unavailable }}"
     tags: bind-repo
     # notify: yum-clean-metadata
     # uncomment notify if repo is removed 'state: absent'
@@ -91,7 +91,7 @@
       zone: "{{ firewalldZone }}"
     when: ListenStatsV4 != '' or ListenStatsV6 != ''
 
-  - name: Allow isc-bind to use listen to port 8880 for statistics
+  - name: SE Linux rule to allow isc-bind to listen to port 8880 for statistics connections
     seboolean:
       name: nis_enabled
       state: yes
