--- a/vars/recursive.yml
+++ b/vars/recursive.yml
@@ -1,12 +1,13 @@
 ---
-  key_file: "yes"
-  rpz_soa_contact: "rpz.localhost."
+  key_file: "no"
+  rpz_soa_contact: "rpz.localhost"
   rpz_policies:
     - "basic_rpz"
   rpz_block_domains:
     - "xxx"
     - "sex"
     - "adult"
+    - "mail"
   # - "evil.example.net"
   #rpz_block_ns_label:
   #  - "ns1.evil.example.net"
