--- a/tasks/secondary.yml
+++ b/tasks/secondary.yml
@@ -25,7 +25,7 @@
           - "{{ item.name }}.zone.j2"
           - secondary.zone.j2
         paths:
-          - "{{ zone_file_path }}"
+          - "{{ conf_file_path }}"
           - 'templates'
     loop: "{{ sec_domains }}"
     notify: reconfig isc-bind scl
