--- a/tasks/secondary.yml
+++ b/tasks/secondary.yml
@@ -4,17 +4,19 @@
 
   - name: Add per domain directory for Secondary zones.
     file:
-      path: "{{ datapath }}/sec/{{ item.name }}"
+      path: "{{ datapath }}/sec/{{ domain.name }}"
       state: directory
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
       mode: 0770
     loop: "{{ sec_domains }}"
+    loop_control:
+      loop_var: domain
 
   - name: Copy Zone statement files for secondary domains
     template:
       src: "{{ lookup('first_found', zone_statement) }}"
-      dest: "{{ confpath }}/{{ item.name }}.zone.conf"
+      dest: "{{ confpath }}/{{ domain.name }}.zone.conf"
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
       backup: yes
@@ -22,12 +24,21 @@
     vars:
       zone_statement:
         files:
-          - "{{ item.name }}.zone.j2"
+          - "{{ domain.name }}.zone.j2"
           - secondary.zone.j2
         paths:
           - "{{ conf_file_path }}"
           - 'templates'
     loop: "{{ sec_domains }}"
+    loop_control:
+      loop_var: domain
     notify: reconfig isc-bind scl
+
   - name: Move pre-existing TSIG files to host. These will not be generated if missing
-    
+    copy:
+      src: "{{ shared_file_path }}/{{ tsig_name }}.tsig"
+      dest: "{{ confpath }}/{{ tsig_name }}.tsig"
+    loop: "{{ tsig_files }}"
+    loop_control:
+      loop_var: tsig_name
+    notify: reconfig isc-bind scl
