--- a/vars/recursive.yml
+++ b/vars/recursive.yml
@@ -1,9 +1,10 @@
 ---
   key_file: "no"
   rpz_soa_contact: "rpz.localhost"
-  rpz_policies:
-    - "basic_rpz"
-  rpz_block_domains:
+  rpz_policies: # Manually generated zones.
+    - { name: "basic_rpz", updated_by: "manual" }
+    - { name: "mozilla_doh_rpz", updated_by: "manual" }
+  rpz_block_domains: # For the basic_rpz policy
     - "xxx"
     - "sex"
     - "adult"
@@ -13,3 +14,8 @@
   #  - "ns1.evil.example.net"
   #rpz_block_ns_ip:
   #  - "32.5.0.0.127"
+  short_time:
+    five_min: '1,6,11,16,21,26,31,36,41,46,51,56'
+    fifteen_min: '1,16,31,46'
+  rpz_cron_jobs:
+    - { 'name': 'urlhaus', 'cron_label': 'Fetch RPZ from urlhaus.abuse.ch', 'minute': '{{ short_time.fifteen_min }}', 'hour': '*', 'job': 'wget https://urlhaus.abuse.ch/downloads/rpz/ -O {{ datapath }}/rpz/urlhaus.db && rndc reload urlhaus' }
