--- a/tasks/recursive.yml
+++ b/tasks/recursive.yml
@@ -5,8 +5,8 @@
     copy:
       src: files/bind.keys.v9_11
       dest: "{{ confpath }}/bind.keys"
-      owner: "{{ binduser }}"
-      group: "{{ binduser }}"
+      owner: "root"
+      group: "{{ bindgroup }}"
       mode: '0644'
     when: key_file == 'yes'
   # Review README for validating the file above
@@ -14,9 +14,9 @@
     file:
       path: "{{ datapath }}/rpz"
       state: directory
-      owner: "{{ binduser }}"
-      group: "{{ binduser }}"
-      mode: 0770
+      owner: "root"
+      group: "{{ bindgroup }}"
+      mode: '0750'
 
   - name: Prepare any cron based RPZ feeds
     block:
@@ -50,10 +50,10 @@
       template:
         src: "{{ lookup('first_found', rpz_source) }}"
         dest: "{{ datapath }}/rpz/{{ item.name }}.db"
-        owner: "{{ binduser }}"
-        group: "{{ binduser }}"
+        owner: "root"
+        group: "{{ bindgroup }}"
         backup: yes
-        mode: 0660
+        mode: 0640
       vars:
         rpz_source:
           files:
@@ -74,9 +74,9 @@
         src: rpz-serial.j2
         dest: "{{ datapath }}/rpz/{{ policy.item.name }}.serial"
         force: yes
-        owner: "{{ binduser }}"
-        group: "{{ binduser }}"
-        mode: 0660
+        owner: "root"
+        group: "{{ bindgroup }}"
+        mode: 0640
       when: policy.changed == true
       loop: "{{ zone_changes.results}}"
       loop_control:
